fix: header visibility

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,11 +12,13 @@
     background: rgba(196, 196, 196, 0.01);
     border-bottom: solid 1px var(--border-color);
     opacity: 1;
-    transition: opacity 0.4s ease;
+    visibility: visible;
+    transition: all 0.4s ease;
     z-index: 500;
 }
 
 .header_hidden {
+    visibility: hidden;
     opacity: 0;
 }
 
